# cd_hook

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.mk
inc/: cd_hook.h
include/: cd_hook.h
jmp/: jmp32.asm  jmp64.asm
src/: cd_hook.c  main.c
src/include/: cd_hook.h
tests/: fail_test.c  initialize.cpp  inline.c  inline.cpp  macros.cpp  reinitialize.cpp  test.c  test_common.h  vmt.cpp
